--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>OTHL Play-By-Play</title>
-    <base href="/">
+    <base href="http://othl.ca/goodies/play-by-play/">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico"/>
     <link rel="stylesheet" href="assets/vendors/normalize.css">
     <link rel="stylesheet" href="assets/vendors/loader.css">
